--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,14 @@ div.centre
     margin-left: auto;
     margin-right: auto;
 }
+
+.container {
+    margin: 10px auto;
+    position: relative;
+    text-align:center;
+}
+
+.block {
+    display:inline-block;
+    margin: 10px;
+}
